fix(MdScrollbar): fix scrollbar color and size to better match specs

--- a/src/base/scrollbar.scss
+++ b/src/base/scrollbar.scss
@@ -1,7 +1,7 @@
 .md-scrollbar {
   &::-webkit-scrollbar {
-    width: 7px;
-    height: 7px;
+    width: 8px;
+    height: 8px;
   }
 
   &::-webkit-scrollbar-button {
