--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -84,7 +84,7 @@ $md-color-levels: (
     icon: #fff,
     icon-disabled: rgba(#fff, .5),
     divider: rgba(#fff, .12),
-    scrollbar: #212121,
+    scrollbar: #9E9E9E,
     scrollbar-background: #616161
   )
 );
